--- a/_includes/components/head.njk
+++ b/_includes/components/head.njk
@@ -11,15 +11,20 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
 
   <!-- Stylesheets -->
-	<link rel="stylesheet" href="css/bootstrap.min.css"/>
-	<link rel="stylesheet" href="css/font-awesome.min.css"/>
-	<link rel="stylesheet" href="css/slicknav.min.css"/>
-	<link rel="stylesheet" href="css/owl.carousel.min.css"/>
-	<link rel="stylesheet" href="css/magnific-popup.css"/>
-	<link rel="stylesheet" href="css/animate.css"/>
+  
+    {% set css %}
+      {% include  "assets/bootstrap.min.css"/>
+      {% include  "assets/font-awesome.min.css"/>
+      {% include  "assets/slicknav.min.css"/>
+      {% include  "assets/owl.carousel.min.css"/>
+      {% include  "assets/magnific-popup.css"/>
+      {% include  "assets/animate.css"/>
+
+    {% endset %}
+    <style>{{ css | cssmin | safe }}</style>
 
 	<!-- Main Stylesheets -->
-	<link rel="stylesheet" href="css/style.css"/>
+	{% include  "assets/style.css"/>
 
   <script async src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
   {% set css %}
@@ -31,3 +36,5 @@
   {% endset %}
   <script>{{ js | jsmin | safe }}</script>
 </head>
+
+
