--- a/_includes/components/head.njk
+++ b/_includes/components/head.njk
@@ -13,12 +13,12 @@
   <!-- Stylesheets -->
   
     {% set css %}
-      {% include  "assets/bootstrap.min.css"/>
-      {% include  "assets/font-awesome.min.css"/>
-      {% include  "assets/slicknav.min.css"/>
-      {% include  "assets/owl.carousel.min.css"/>
-      {% include  "assets/magnific-popup.css"/>
-      {% include  "assets/animate.css"/>
+      {% include  "assets/css/bootstrap.min.css"/>
+      {% include  "assets/css/font-awesome.min.css"/>
+      {% include  "assets/css/slicknav.min.css"/>
+      {% include  "assets/css/owl.carousel.min.css"/>
+      {% include  "assets/css/magnific-popup.css"/>
+      {% include  "assets/css/animate.css"/>
 
     {% endset %}
     <style>{{ css | cssmin | safe }}</style>
