--- a/_includes/components/head.njk
+++ b/_includes/components/head.njk
@@ -24,7 +24,7 @@
     <style>{{ css | cssmin | safe }}</style>
 
 	<!-- Main Stylesheets -->
-	{% include  "assets/style.css" %}
+	{% include  "assets/css/style.css" %}
 
   <script async src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
   {% set css %}
