--- a/_includes/components/header.njk
+++ b/_includes/components/header.njk
@@ -19,16 +19,12 @@
 					</div>
 					<!-- Menu -->
 					<ul class="main-menu primary-menu">
-						<li><a href="home.html">Home</a></li>
-						<li><a href="games.html">Games</a>
-							<ul class="sub-menu">
-								<li><a href="game-single.html">Game Singel</a></li>
-							</ul>
-						</li>
-						<li><a href="review.html">Reviews</a></li>
-						<li><a href="blog.html">News</a></li>
-						<li><a href="contact.html">Contact</a></li>
-					</ul>
+                        {%- for nav in collections.nav | sort(attribute="date") -%}
+                            <li>
+                            <a href="{{ nav.url | url }}"{% if nav.url == page.url %} data-current="current item"{% endif %}>{{ nav.data.navtitle }}</a>
+                            </li>
+                        {%- endfor -%}
+                    </ul>
 				</nav>
 			</div>
 		</div>
