--- a/_includes/components/footer.njk
+++ b/_includes/components/footer.njk
@@ -2,13 +2,13 @@
 	<footer class="footer-section">
 		<div class="container">
 			<div class="footer-left-pic">
-				<img src="img/footer-left-pic.png" alt="">
+				<img src="assets/img/footer-left-pic.png" alt="">
 			</div>
 			<div class="footer-right-pic">
-				<img src="img/footer-right-pic.png" alt="">
+				<img src="assets/img/footer-right-pic.png" alt="">
 			</div>
 			<a href="#" class="footer-logo">
-				<img src="./img/logo.png" alt="">
+				<img src="assets/img/logo.png" alt="">
 			</a>
 			<ul class="main-menu footer-menu">
 				<li><a href="">Home</a></li>
