--- a/_includes/components/header.njk
+++ b/_includes/components/header.njk
@@ -11,7 +11,7 @@
 			<div class="header-bar-warp d-flex">
 				<!-- site logo -->
 				<a href="home.html" class="site-logo">
-					<img src="./img/logo.png" alt="">
+					<img src="assets/img/logo.png" alt="">
 				</a>
 				<nav class="top-nav-area w-100">
 					<div class="user-panel">
