--- a/_includes/components/footer.njk
+++ b/_includes/components/footer.njk
@@ -24,7 +24,7 @@
 				<a href="#"><i class="fa fa-dribbble"></i></a>
 				<a href="#"><i class="fa fa-behance"></i></a>
 			</div>
-			<div class="copyright"><a href="">Colorlib</a> 2018 @ All rights reserved</div>
+			<div class="copyright"><a href="">sandyraharja</a> 2019 @ All rights reserved</div>
 		</div>
 	</footer>
 	<!-- Footer section end -->
