--- a/_includes/components/footer.njk
+++ b/_includes/components/footer.njk
@@ -5,10 +5,10 @@
 				<img src="assets/img/footer-left-pic.png" alt="">
 			</div>
 			<div class="footer-right-pic">
-				<img src="assets/img/footer-right-pic.png" alt="">
+				<img src="{{ '/' | url }}assets/img/footer-right-pic.png" alt="">
 			</div>
 			<a href="#" class="footer-logo">
-				<img src="assets/img/logo.png" alt="">
+				<img src="{{ '/' | url }}assets/img/logo.png" alt="">
 			</a>
 			<ul class="main-menu footer-menu">
 				<li><a href="">Home</a></li>
