--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -8,43 +8,14 @@
 	<div id="preloder">
 		<div class="loader"></div>
 	</div>
-		<header class="header-section">
-			<div class="header-warp">
-				<div class="header-social d-flex justify-content-end">
-					<p>Follow us:</p>
-					<a href="#"><i class="fa fa-pinterest"></i></a>
-					<a href="#"><i class="fa fa-facebook"></i></a>
-					<a href="#"><i class="fa fa-twitter"></i></a>
-					<a href="#"><i class="fa fa-dribbble"></i></a>
-					<a href="#"><i class="fa fa-behance"></i></a>
-				</div>
-				<div class="header-bar-warp d-flex">
-					<!-- site logo -->
-					<a href="home.html" class="site-logo">
-						<img src="./img/logo.png" alt="">
-					</a>
-					<nav class="top-nav-area w-100">
-						<div class="user-panel">
-							<a href="">Login</a> / <a href="">Register</a>
-						</div>
-						<!-- Menu -->
-				<ul class="main-menu primary-menu">
-							{%- for nav in collections.nav | sort(attribute="date") -%}
-								<li>
-								<a href="{{ nav.url | url }}"{% if nav.url == page.url %} data-current="current item"{% endif %}>{{ nav.data.navtitle }}</a>
-								</li>
-							{%- endfor -%}
-						</ul>
-					</nav>
-				</div>
-			</div>
-		</header>
+		
+	{% include  "components/header.njk" %}
 
 		<main>
 			{{ layoutContent | safe }}
 		</main>
 
-		{% include "components/footer.njk" %}
+	{% include "components/footer.njk" %}
 
 	</body>
 
