--- a/_includes/components/head.njk
+++ b/_includes/components/head.njk
@@ -5,7 +5,7 @@
   <meta name="description" content="EndGam Gaming Magazine Template">
   <meta name="keywords" content="endGam,gGaming, magazine, html">
   <!-- Favicon -->
-  <link href="_includes/assets/img/favicon.ico" rel="shortcut icon"/>
+  <link href="{{ '/' | url }}_includes/assets/img/favicon.ico" rel="shortcut icon"/>
 
   <!-- Google Font -->
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
