--- a/_includes/components/postslist.njk
+++ b/_includes/components/postslist.njk
@@ -1,6 +1,9 @@
-<section>
+<section class="blog-page">
+		<div class="big-blog-item">
+			<div class="row">
+				<div class="col-xl-9 col-lg-8 col-md-7">
 	{% for post in postslist | reverse %}
-		<article{% if post.url == url %} data-current="current item"{% endif %}>
+		<article{% if post.url == url %} data-current="current item"{% endif %} class="big-blog-item">
 			<h3>
 				<a href="{{ post.url | url }}">
 					{% if post.data.title %}
@@ -32,4 +35,13 @@
 			{% endif %}
 		</article>
 	{% endfor %}
+					</div>
+				</div>
+			</div>
+		</div>
 </section>
+
+
+
+
+
