--- a/_includes/layouts/blog.njk
+++ b/_includes/layouts/blog.njk
@@ -9,6 +9,6 @@ permalink: /blog/index.html
 
 <section class="blog-page">
 	<div class="container">
-		{{ layoutContent | safe }}
+        {% include "components/postslist.njk" %}
 	</div>
 </section>
