--- a/_includes/layouts/blog.njk
+++ b/_includes/layouts/blog.njk
@@ -11,4 +11,9 @@ permalink: /blog/index.html
 	<div class="container">
         {% include "components/postslist.njk" %}
 	</div>
+    <div class="site-pagination">
+		<a href="#" class="active">01.</a>
+		<a href="#">02.</a>
+		<a href="#">03.</a>
+	</div>
 </section>
