--- a/_includes/layouts/page.njk
+++ b/_includes/layouts/page.njk
@@ -2,6 +2,8 @@
 layout: layouts/base.njk
 section: page
 ---
-<h1>{{ title }}</h1>
+<section>
+    <h1>{{ title }}</h1>
+<section>
 
 {{ layoutContent | safe }}
