--- a/_includes/layouts/page.njk
+++ b/_includes/layouts/page.njk
@@ -2,8 +2,10 @@
 layout: layouts/base.njk
 section: page
 ---
-<section>
-    <h1>{{ title }}</h1>
-<section>
 
-{{ layoutContent | safe }}
+
+<section class="blog-udin">
+	<div class="container">
+        {{ layoutContent | safe }}
+	</div>
+</section>
