--- a/_includes/layouts/page.njk
+++ b/_includes/layouts/page.njk
@@ -4,7 +4,7 @@ section: page
 ---
 
 
-<section class="blog-udin">
+<section class="blog-page">
 	<div class="container">
         {{ layoutContent | safe }}
 	</div>
