--- a/_includes/layouts/page.njk
+++ b/_includes/layouts/page.njk
@@ -3,9 +3,12 @@ layout: layouts/base.njk
 section: page
 ---
 
-
 <section class="blog-page">
-	<div class="container">
-        {{ layoutContent | safe }}
-	</div>
+		<div class="big-blog-item">
+			<div class="row">
+				<div class="col-xl-9 col-lg-8 col-md-7">
+                    {{ layoutContent | safe }}
+                </div>
+            </div>
+	    </div>
 </section>
