--- a/_includes/layouts/page.njk
+++ b/_includes/layouts/page.njk
@@ -3,7 +3,7 @@ layout: layouts/base.njk
 section: page
 ---
 
-<section class="blog-page">
+<section class="page">
 		<div class="big-blog-item">
 			<div class="row">
 				<div class="col-xl-9 col-lg-8 col-md-7">
