--- a/_includes/layouts/home.njk
+++ b/_includes/layouts/home.njk
@@ -4,7 +4,7 @@ section: home
 ---
 
 	<!-- Page top section -->
-	<section class="page-top-section set-bg" data-setbg="_includes/assets/img/page-top-bg/4.jpg">
+	<section class="page-top-section set-bg" data-setbg="{{ '/' | url }}_includes/assets/img/page-top-bg/4.jpg">
 		<div class="page-info">
 			<h2>Contact</h2>
 			<div class="site-breadcrumb">
@@ -31,7 +31,7 @@ section: home
 			<h2>Subscribe to our newsletter</h2>
 			<form class="newsletter-form">
 				<input type="text" placeholder="ENTER YOUR E-MAIL">
-				<button class="site-btn">subscribe <img src="_includes/assets/img/icons/double-arrow.png" alt="#"/></button>
+				<button class="site-btn">subscribe <img src="{{ '/' | url }}_includes/assets/img/icons/double-arrow.png" alt="#"/></button>
 			</form>
 		</div>
 	</section>
