--- a/_includes/layouts/page.njk
+++ b/_includes/layouts/page.njk
@@ -5,7 +5,7 @@ section: page
 	<!-- Page top section -->
 	<section class="page-top-section set-bg" data-setbg="{{ '/' | url }}_includes/assets/img/page-top-bg/4.jpg">
 		<div class="page-info">
-			<h2>Contact</h2>
+			<h2>Udin</h2>
 			<div class="site-breadcrumb">
 				<a href="">Udin</a>  /
 				<span>Udin</span>
