--- a/_includes/layouts/page.njk
+++ b/_includes/layouts/page.njk
@@ -5,10 +5,10 @@ section: page
 	<!-- Page top section -->
 	<section class="page-top-section set-bg" data-setbg="{{ '/' | url }}_includes/assets/img/page-top-bg/4.jpg">
 		<div class="page-info">
-			<h2>Udin</h2>
+			<h2>{{ title }}</h2>
 			<div class="site-breadcrumb">
-				<a href="">Udin</a>  /
-				<span>Udin</span>
+				<a href="">{{ title }}</a>  /
+				<span>{{ title }}</span>
 			</div>
 		</div>
 	</section>
