--- a/_includes/layouts/page.njk
+++ b/_includes/layouts/page.njk
@@ -2,24 +2,13 @@
 layout: layouts/base.njk
 section: page
 ---
-	<!-- Page top section -->
-	<section class="page-top-section set-bg" data-setbg="{{ '/' | url }}_includes/assets/img/page-top-bg/4.jpg">
-		<div class="page-info">
-			<h2>{{ title }}</h2>
-			<div class="site-breadcrumb">
-				<a href="">{{ title }}</a>  /
-				<span>{{ title }}</span>
-			</div>
-		</div>
-	</section>
-	<!-- Page top end-->
 
 
-	<!-- Contact page -->
+	<!-- artikel page -->
 	<section class="contact-page">
 		<div class="container">
 			{{ layoutContent | safe }}
 		</div>
 	</section>
-	<!-- Contact page end-->
+	<!-- artikel page end-->
 
