--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -11,6 +11,7 @@
 		
 	{% include  "components/header.njk" %}
 	
+	<!-- Foto pembatas -->
 	<section class="page-top-section set-bg" data-setbg="{{ '/' | url }}_includes/assets/img/page-top-bg/4.jpg">
 	<div class="page-info">
 		<h2>{{ title }}</h2>
@@ -20,6 +21,7 @@
 		</div>
 	</div>
 	</section>
+	<!-- foto pembatas -->
 
 	{{ layoutContent | safe }}
 
