--- a/_includes/layouts/contact.njk
+++ b/_includes/layouts/contact.njk
@@ -2,8 +2,9 @@
 layout: layouts/base.njk
 section: contact
 ---
+
 	<!-- Page top section -->
-	<section class="page-top-section set-bg" data-setbg="_includes/assets/img/page-top-bg/4.jpg">
+	<section class="page-top-section set-bg" data-setbg="{{ '/' | url }}_includes/assets/img/page-top-bg/4.jpg">
 		<div class="page-info">
 			<h2>Contact</h2>
 			<div class="site-breadcrumb">
@@ -30,8 +31,9 @@ section: contact
 			<h2>Subscribe to our newsletter</h2>
 			<form class="newsletter-form">
 				<input type="text" placeholder="ENTER YOUR E-MAIL">
-				<button class="site-btn">subscribe <img src="_includes/assets/img/icons/double-arrow.png" alt="#"/></button>
+				<button class="site-btn">subscribe <img src="{{ '/' | url }}_includes/assets/img/icons/double-arrow.png" alt="#"/></button>
 			</form>
 		</div>
 	</section>
 	<!-- Newsletter section end -->
+
