--- a/_includes/layouts/contact.njk
+++ b/_includes/layouts/contact.njk
@@ -3,17 +3,17 @@ layout: layouts/base.njk
 section: contact
 ---
 
-	<!-- Page top section -->
+	<!-- Foto pembatas -->
 	<section class="page-top-section set-bg" data-setbg="{{ '/' | url }}_includes/assets/img/page-top-bg/4.jpg">
-		<div class="page-info">
-			<h2>Contact</h2>
-			<div class="site-breadcrumb">
-				<a href="">Home</a>  /
-				<span>Contact</span>
-			</div>
+	<div class="page-info">
+		<h2>{{ title }}</h2>
+		<div class="site-breadcrumb">
+			<a href="">{{ title }}</a>  /
+			<span>{{ title }}</span>
 		</div>
+	</div>
 	</section>
-	<!-- Page top end-->
+	<!-- foto pembatas -->
 
 
 	<!-- Contact page -->
