--- a/_includes/layouts/blog.njk
+++ b/_includes/layouts/blog.njk
@@ -6,6 +6,19 @@ permalink: /blog/index.html
 
 {% set postslist = collections.posts %}
 
+<!-- Foto pembatas -->
+<section class="page-top-section set-bg" data-setbg="{{ '/' | url }}_includes/assets/img/page-top-bg/4.jpg">
+<div class="page-info">
+	<h2>{{ title }}</h2>
+	<div class="site-breadcrumb">
+		<a href="">{{ title }}</a>  /
+		<span>{{ title }}</span>
+	</div>
+</div>
+</section>
+<!-- foto pembatas -->
+
+
 <section class="blog-page">
 	<div class="container">
         {% include "components/postslist.njk" %}
