--- a/_includes/layouts/page.njk
+++ b/_includes/layouts/page.njk
@@ -2,6 +2,17 @@
 layout: layouts/base.njk
 section: page
 ---
+	<!-- Foto pembatas -->
+	<section class="page-top-section set-bg" data-setbg="{{ '/' | url }}_includes/assets/img/page-top-bg/4.jpg">
+	<div class="page-info">
+		<h2>{{ title }}</h2>
+		<div class="site-breadcrumb">
+			<a href="">{{ title }}</a>  /
+			<span>{{ title }}</span>
+		</div>
+	</div>
+	</section>
+	<!-- foto pembatas -->
 
 
 	<!-- artikel page -->
