--- a/_includes/layouts/home.njk
+++ b/_includes/layouts/home.njk
@@ -5,18 +5,18 @@ section: home
 	<!-- Hero section -->
 	<section class="hero-section overflow-hidden">
 		<div class="hero-slider owl-carousel">
-			<div class="hero-item set-bg d-flex align-items-center justify-content-center text-center" data-setbg="img/slider-bg-1.jpg">
+			<div class="hero-item set-bg d-flex align-items-center justify-content-center text-center" data-setbg="{{ '/' | url }}_includes/assets/img/slider-bg-1.jpg">
 				<div class="container">
 					<h2>Game on!</h2>
 					<p>Fusce erat dui, venenatis et erat in, vulputate dignissim lacus. Donec vitae tempus dolor,<br>sit amet elementum lorem. Ut cursus tempor turpis.</p>
-					<a href="#" class="site-btn">Read More  <img src="img/icons/double-arrow.png" alt="#"/></a>
+					<a href="#" class="site-btn">Read More  <img src="{{ '/' | url }}_includes/assets/img/icons/double-arrow.png" alt="#"/></a>
 				</div>
 			</div>
-			<div class="hero-item set-bg d-flex align-items-center justify-content-center text-center" data-setbg="img/slider-bg-2.jpg">
+			<div class="hero-item set-bg d-flex align-items-center justify-content-center text-center" data-setbg="{{ '/' | url }}_includes/assets/img/slider-bg-2.jpg">
 				<div class="container">
 					<h2>Game on!</h2>
 					<p>Fusce erat dui, venenatis et erat in, vulputate dignissim lacus. Donec vitae tempus dolor,<br>sit amet elementum lorem. Ut cursus tempor turpis.</p>
-					<a href="#" class="site-btn">Read More  <img src="img/icons/double-arrow.png" alt="#"/></a>
+					<a href="#" class="site-btn">Read More  <img src="{{ '/' | url }}_includes/assets/img/icons/double-arrow.png" alt="#"/></a>
 				</div>
 			</div>
 		</div>
@@ -34,7 +34,7 @@ section: home
 						<div class="top-meta">11.11.18  /  in <a href="">Games</a></div>
 						<h3>The best online game is out now!</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida....</p>
-						<a href="#" class="read-more">Read More  <img src="img/icons/double-arrow.png" alt="#"/></a>
+						<a href="#" class="read-more">Read More  <img src="{{ '/' | url }}_includes/assets/img/icons/double-arrow.png" alt="#"/></a>
 					</div>
 				</div>
 				<div class="col-md-4">
@@ -42,7 +42,7 @@ section: home
 						<div class="top-meta">11.11.18  /  in <a href="">Playstation</a></div>
 						<h3>Top 5 best games in november</h3>
 						<p>Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum  labore suspendisse ultrices gravida....</p>
-						<a href="#" class="read-more">Read More  <img src="img/icons/double-arrow.png" alt="#"/></a>
+						<a href="#" class="read-more">Read More  <img src="{{ '/' | url }}_includes/assets/img/icons/double-arrow.png" alt="#"/></a>
 					</div>
 				</div>
 				<div class="col-md-4">
@@ -50,7 +50,7 @@ section: home
 						<div class="top-meta">11.11.18  /  in <a href="">Reviews</a></div>
 						<h3>Get this game at a promo price</h3>
 						<p>Sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida ncididunt ut labore ....</p>
-						<a href="#" class="read-more">Read More  <img src="img/icons/double-arrow.png" alt="#"/></a>
+						<a href="#" class="read-more">Read More  <img src="{{ '/' | url }}_includes/assets/img/icons/double-arrow.png" alt="#"/></a>
 					</div>
 				</div>
 			</div>
@@ -75,37 +75,37 @@ section: home
 					<!-- Blog item -->
 					<div class="blog-item">
 						<div class="blog-thumb">
-							<img src="./img/blog/1.jpg" alt="">
+							<img src="./{{ '/' | url }}_includes/assets/img/blog/1.jpg" alt="">
 						</div>
 						<div class="blog-text text-box text-white">
 							<div class="top-meta">11.11.18  /  in <a href="">Games</a></div>
 							<h3>The best online game is out now!</h3>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius-mod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Lorem ipsum dolor sit amet, consecte-tur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.....</p>
-							<a href="#" class="read-more">Read More  <img src="img/icons/double-arrow.png" alt="#"/></a>
+							<a href="#" class="read-more">Read More  <img src="{{ '/' | url }}_includes/assets/img/icons/double-arrow.png" alt="#"/></a>
 						</div>
 					</div>
 					<!-- Blog item -->
 					<div class="blog-item">
 						<div class="blog-thumb">
-							<img src="./img/blog/2.jpg" alt="">
+							<img src="./{{ '/' | url }}_includes/assets/img/blog/2.jpg" alt="">
 						</div>
 						<div class="blog-text text-box text-white">
 							<div class="top-meta">11.11.18  /  in <a href="">Games</a></div>
 							<h3>The best online game is out now!</h3>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius-mod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Lorem ipsum dolor sit amet, consecte-tur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.....</p>
-							<a href="#" class="read-more">Read More  <img src="img/icons/double-arrow.png" alt="#"/></a>
+							<a href="#" class="read-more">Read More  <img src="{{ '/' | url }}_includes/assets/img/icons/double-arrow.png" alt="#"/></a>
 						</div>
 					</div>
 					<!-- Blog item -->
 					<div class="blog-item">
 						<div class="blog-thumb">
-							<img src="./img/blog/3.jpg" alt="">
+							<img src="./{{ '/' | url }}_includes/assets/img/blog/3.jpg" alt="">
 						</div>
 						<div class="blog-text text-box text-white">
 							<div class="top-meta">11.11.18  /  in <a href="">Games</a></div>
 							<h3>The best online game is out now!</h3>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius-mod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Lorem ipsum dolor sit amet, consecte-tur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.....</p>
-							<a href="#" class="read-more">Read More  <img src="img/icons/double-arrow.png" alt="#"/></a>
+							<a href="#" class="read-more">Read More  <img src="{{ '/' | url }}_includes/assets/img/icons/double-arrow.png" alt="#"/></a>
 						</div>
 					</div>
 				</div>
@@ -116,7 +116,7 @@ section: home
 							<div class="trending-widget">
 								<div class="tw-item">
 									<div class="tw-thumb">
-										<img src="./img/blog-widget/1.jpg" alt="#">
+										<img src="./{{ '/' | url }}_includes/assets/img/blog-widget/1.jpg" alt="#">
 									</div>
 									<div class="tw-text">
 										<div class="tw-meta">11.11.18  /  in <a href="">Games</a></div>
@@ -125,7 +125,7 @@ section: home
 								</div>
 								<div class="tw-item">
 									<div class="tw-thumb">
-										<img src="./img/blog-widget/2.jpg" alt="#">
+										<img src="./{{ '/' | url }}_includes/assets/img/blog-widget/2.jpg" alt="#">
 									</div>
 									<div class="tw-text">
 										<div class="tw-meta">11.11.18  /  in <a href="">Games</a></div>
@@ -134,7 +134,7 @@ section: home
 								</div>
 								<div class="tw-item">
 									<div class="tw-thumb">
-										<img src="./img/blog-widget/3.jpg" alt="#">
+										<img src="./{{ '/' | url }}_includes/assets/img/blog-widget/3.jpg" alt="#">
 									</div>
 									<div class="tw-text">
 										<div class="tw-meta">11.11.18  /  in <a href="">Games</a></div>
@@ -143,7 +143,7 @@ section: home
 								</div>
 								<div class="tw-item">
 									<div class="tw-thumb">
-										<img src="./img/blog-widget/4.jpg" alt="#">
+										<img src="./{{ '/' | url }}_includes/assets/img/blog-widget/4.jpg" alt="#">
 									</div>
 									<div class="tw-text">
 										<div class="tw-meta">11.11.18  /  in <a href="">Games</a></div>
@@ -167,7 +167,7 @@ section: home
 						</div>
 						<div class="widget-item">
 						<a href="#" class="add">
-							<img src="./img/add.jpg" alt="">
+							<img src="./{{ '/' | url }}_includes/assets/img/add.jpg" alt="">
 						</a>
 					</div>
 					</div>
@@ -178,8 +178,8 @@ section: home
 	<!-- Blog section end -->
 
 		<!-- Intro section -->
-	<section class="intro-video-section set-bg d-flex align-items-end " data-setbg="./img/promo-bg.jpg">
-		<a href="https://www.youtube.com/watch?v=uFsGy5x_fyQ" class="video-play-btn video-popup"><img src="img/icons/solid-right-arrow.png" alt="#"></a>
+	<section class="intro-video-section set-bg d-flex align-items-end " data-setbg="{{ '/' | url }}_includes/assets/img/promo-bg.jpg">
+		<a href="https://www.youtube.com/watch?v=uFsGy5x_fyQ" class="video-play-btn video-popup"><img src="{{ '/' | url }}_includes/assets/img/icons/solid-right-arrow.png" alt="#"></a>
 		<div class="container">
 			<div class="video-text">
 				<h2>Promo video of the game</h2>
@@ -192,18 +192,17 @@ section: home
 
 	<!-- Featured section -->
 	<section class="featured-section">
-		<div class="featured-bg set-bg" data-setbg="img/featured-bg.jpg"></div>
+		<div class="featured-bg set-bg" data-setbg="{{ '/' | url }}_includes/assets/img/featured-bg.jpg"></div>
 		<div class="featured-box">
 			<div class="text-box">
 				<div class="top-meta">11.11.18  /  in <a href="">Games</a></div>
 				<h3>The game you’ve been waiting  for is out now</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliquamet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vestibulum posuere porttitor justo id pellentesque. Proin id lacus feugiat, posuere erat sit amet, commodo ipsum. Donec pellentesque vestibulum metus...</p>
-				<a href="#" class="read-more">Read More  <img src="img/icons/double-arrow.png" alt="#"/></a>
+				<a href="#" class="read-more">Read More  <img src="{{ '/' | url }}_includes/assets/img/icons/double-arrow.png" alt="#"/></a>
 			</div>
 		</div>
 	</section>
 	<!-- Featured section end-->
-
 
 
 	<!-- Newsletter section -->
