--- a/_includes/layouts/blog.njk
+++ b/_includes/layouts/blog.njk
@@ -24,3 +24,5 @@ permalink: /blog/index.html
         {% include "components/postslist.njk" %}
 	</div>
 </section>
+
+{% include "components/footer.njk" %}
