--- a/_includes/layouts/contact.njk
+++ b/_includes/layouts/contact.njk
@@ -25,15 +25,5 @@ section: contact
 	<!-- Contact page end-->
 
 
-	<!-- Newsletter section -->
-	<section class="newsletter-section">
-		<div class="container">
-			<h2>Subscribe to our newsletter</h2>
-			<form class="newsletter-form">
-				<input type="text" placeholder="ENTER YOUR E-MAIL">
-				<button class="site-btn">subscribe <img src="{{ '/' | url }}_includes/assets/img/icons/double-arrow.png" alt="#"/></button>
-			</form>
-		</div>
-	</section>
-	<!-- Newsletter section end -->
+	{% include "components/footer.njk" %}
 
