--- a/_includes/layouts/blog.njk
+++ b/_includes/layouts/blog.njk
@@ -25,4 +25,4 @@ permalink: /blog/index.html
 	</div>
 </section>
 
-{% include "components/footer.njk" %}
+{% include "components/newsletter.njk" %}
