--- a/_includes/layouts/contact.njk
+++ b/_includes/layouts/contact.njk
@@ -25,5 +25,5 @@ section: contact
 	<!-- Contact page end-->
 
 
-	{% include "components/footer.njk" %}
+	{% include "components/newsletter.njk" %}
 
