newsletter dipindah ke base

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -13,6 +13,8 @@
 	
 	{{ layoutContent | safe }}
 
+	{% include "components/newsletter.njk" %}
+
 	{% include "components/footer.njk" %}
 
 	</body>
