--- a/_includes/components/newsletter.njk
+++ b/_includes/components/newsletter.njk
@@ -4,7 +4,7 @@
 			<h2>Subscribe to our newsletter</h2>
 			<form class="newsletter-form">
 				<input type="text" placeholder="ENTER YOUR E-MAIL">
-				<button class="site-btn">subscribe <img src="img/icons/double-arrow.png" alt="#"/></button>
+				<button class="site-btn">subscribe <img src="{{ '/' | url }}_includes/assets/img/icons/double-arrow.png" alt="#"/></button>
 			</form>
 		</div>
 	</section>
