--- a/_includes/components/postslist.njk
+++ b/_includes/components/postslist.njk
@@ -13,6 +13,9 @@
 									{% endif %}
 								</a>
 							</h3>
+							<div class="review-pic">
+								<img src="{{ '/' | url }}_includes/assets/img/review/1.jpg" alt="">
+							</div>
 							{% if post.data.summary %}
 								<p>
 									{{ post.data.summary }}
