--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -3,6 +3,18 @@ layout: layouts/base.njk
 section: post
 ---
 
+	<!-- Foto pembatas -->
+	<section class="page-top-section set-bg" data-setbg="{{ '/' | url }}_includes/assets/img/page-top-bg/4.jpg">
+	<div class="page-info">
+		<h2>{{ title }}</h2>
+		<div class="site-breadcrumb">
+			<a href="">{{ title }}</a>  /
+			<span>{{ title }}</span>
+		</div>
+	</div>
+	</section>
+	<!-- foto pembatas -->
+
 <article>
   <h1>{{ title }}</h1>
   <p>
