--- a/_includes/layouts/contact.njk
+++ b/_includes/layouts/contact.njk
@@ -15,6 +15,7 @@ section: contact
 	</section>
 	<!-- foto pembatas -->
 
+	{% include "components/pembatas.njk"%}
 
 	<!-- Contact page -->
 	<section class="contact-page">
