--- a/_includes/layouts/blog.njk
+++ b/_includes/layouts/blog.njk
@@ -18,6 +18,8 @@ permalink: /blog/index.html
 </section>
 <!-- foto pembatas -->
 
+{% include "components/pembatas.njk"%}
+
 
 <section class="blog-page">
 	<div class="container">
