--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -15,6 +15,8 @@ section: post
 	</section>
 	<!-- foto pembatas -->
 
+{% include "components/pembatas.njk"%}  
+
 <article>
   <h1>{{ title }}</h1>
   <p>
