--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -13,7 +13,7 @@ section: post
     </small>
   </p>
   
-  <div align="justify">{{ layoutContent | safe }}</div>
+  {{ layoutContent | safe }}
 
   {% if tags %}
     <p>
