--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -6,14 +6,20 @@ section: post
 {% include "components/pembatas.njk"%}  
 
 <article>
+<section class="article-head">
   <h1>{{ title }}</h1>
   <p>
     <small>
       <time datetime="{{ date | machineDate }}">{{ date | readableDate }}</time> by {{ metadata.author.name }}
     </small>
   </p>
-  
+</section>
+
+<section class="article">
+  <div class="article-text">  
   {{ layoutContent | safe }}
+  </div>
+</section>  
 
   {% if tags %}
     <p>
