--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -6,7 +6,7 @@ section: post
 {% include "components/pembatas.njk"%}  
 
 <article>
-<section class="article-head">
+<section class="article-head" align="middle">
   <h1>{{ title }}</h1>
   <p>
     <small>
@@ -15,7 +15,7 @@ section: post
   </p>
 </section>
 
-<section class="article">
+<section class="article" align="middle">
   <div class="article-text">  
   {{ layoutContent | safe }}
   </div>
