--- a/_includes/assets/css/style.css
+++ b/_includes/assets/css/style.css
@@ -1620,7 +1620,7 @@ ol {
 	.game-single-content .gs-title {
 		font-size: 40px;
 	}
-	.thumbnail-pic img {
+	.review-pic img {
 		min-width: 100%;
 		margin-bottom: 30px;
 	}
@@ -1718,7 +1718,7 @@ ol {
 	.game-single-content .gs-title {
 		font-size: 40px;
 	}
-	.thumbnail-pic img {
+	.review-pic img {
 		min-width: 100%;
 		margin-bottom: 30px;
 	}
