--- a/_includes/components/postslist.njk
+++ b/_includes/components/postslist.njk
@@ -13,7 +13,7 @@
 									{% endif %}
 								</a>
 							</h3>
-								<div class="thumbnail-pic"
+								<div class="thumbnail-pic">
 										{% if post.data.thumbnail %}
 											<img src="{{ url }}{{ post.data.thumbnail }}"  alt="post.data.title">
 										{% else %}
