--- a/_includes/assets/css/style.css
+++ b/_includes/assets/css/style.css
@@ -457,6 +457,16 @@ ol {
 }
 
 /*------------------
+  article section
+---------------------*/
+.article-head {
+	text-align: center;
+}
+.article-text {
+	text-align: center;
+}
+
+/*------------------
   Hero section
 ---------------------*/
 
