--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -14,24 +14,55 @@ section: post
 			</div>
 			<div class="row">
 				<div class="col-xl-9 col-lg-8 col-md-7 game-single-content">
-					<div class="gs-meta">11.11.18  /  in <a href="">Games</a></div>
+					<div class="gs-meta">{{ date | dateDisplay }}  /  in <a href="">Games</a></div>
 					<h2 class="gs-title">{{ title }}</h2>
 					<h4>Gameplay</h4>
 					<p>{{ layoutContent | safe }}</p>
-					<div class="geme-social-share pt-5 d-flex">
-						<p>Share:</p>
-						<a href="#"><i class="fa fa-pinterest"></i></a>
-						<a href="#"><i class="fa fa-facebook"></i></a>
-						<a href="#"><i class="fa fa-twitter"></i></a>
-						<a href="#"><i class="fa fa-dribbble"></i></a>
-						<a href="#"><i class="fa fa-behance"></i></a>
-					</div>
 			    </div>
-        </div>
+            </div>
 		  </div>
 		</div>
 	</section>
 	<!-- article section end -->
 
+         {% set bukan = ['post','tech','environment','politics','sport','automotive'] %}
+    {% if tags %}
+    <p>
+    {% for tag in tags %}
+      {% if tag not in bukan %}
+          {% set tagUrl %}/tags/{{ tag | slug }}/{% endset %}
+          <a href="{{ tagUrl | url }}" rel="tag">{{ tag }}</a>
+      {%- endif -%}
+    {% endfor %}
+    </p>
+    {% endif %}  
+
+
+    <div class="geme-social-share pt-5 d-flex">
+        <p>Share:</p>
+        <a href="#"><i class="fa fa-pinterest"></i></a>
+        <a href="#"><i class="fa fa-facebook"></i></a>
+        <a href="#"><i class="fa fa-twitter"></i></a>
+        <a href="#"><i class="fa fa-dribbble"></i></a>
+        <a href="#"><i class="fa fa-behance"></i></a>
+    </div>
+
+    <nav>
+      {% if tags %}
+          {% for tag in tags %}
+            {% if tag in bukan %}
+               <a href="{{ site.url }}/{{ tag | slug }}/">← {{ tag }} index</a>
+            {%- endif -%}
+          {% endfor %}
+      {% endif %}
+    </nav>  
+
+
+  - post
+  - tech
+  - environment
+  - politics
+  - sport
+  - automotive
 
 
