--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -6,8 +6,10 @@ section: post
 {% include "components/pembatas.njk"%}  
 
 
-<!-- article section -->
+
 <section class="games-single-page">
+
+<!-- article section -->
 		<div class="container">
 			<div class="game-single-preview">
 				<img src="{{ '/' | url }}_includes/assets/img/games/big.jpg" alt="">
@@ -53,7 +55,8 @@ section: post
             {% endfor %}
         {% endif %}
         </nav>
-</section></section>  
+
+</section> 
 
 
 
