--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -25,38 +25,18 @@ section: post
 		</div>	
 <!-- article section end -->
 
-            {% set bukan = ['post','tech','environment','politics','sport','automotive'] %}
-        {% if tags %}
-        <p>
-        {% for tag in tags %}
-        {% if tag not in bukan %}
-            {% set tagUrl %}/tags/{{ tag | slug }}/{% endset %}
-            <a href="{{ tagUrl | url }}" rel="tag">{{ tag }}</a>
-        {%- endif -%}
-        {% endfor %}
-        </p>
-        {% endif %}  
-
-        <div class="geme-social-share pt-5 d-flex">
-            <p>Share:</p>
-            <a href="#"><i class="fa fa-pinterest"></i></a>
-            <a href="#"><i class="fa fa-facebook"></i></a>
-            <a href="#"><i class="fa fa-twitter"></i></a>
-            <a href="#"><i class="fa fa-dribbble"></i></a>
-            <a href="#"><i class="fa fa-behance"></i></a>
-        </div>
-
-        <nav>
-        {% if tags %}
-            {% for tag in tags %}
-                {% if tag in bukan %}
-                <a href="{{ site.url }}/{{ tag | slug }}/">← {{ tag }} index</a>
-                {%- endif -%}
-            {% endfor %}
-        {% endif %}
-        </nav>
-
 </section> 
+
+			<div class="footer-social d-flex justify-content-center">
+				<a href="#"><i class="fa fa-pinterest"></i></a>
+				<a href="#"><i class="fa fa-facebook"></i></a>
+				<a href="#"><i class="fa fa-twitter"></i></a>
+				<a href="#"><i class="fa fa-dribbble"></i></a>
+				<a href="#"><i class="fa fa-behance"></i></a>
+			</div>
+
+
+
 
 
 
