--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -27,6 +27,7 @@ section: post
 
 </section> 
 
+<section class="share-it">
 			<div class="footer-social d-flex justify-content-center">
 				<a href="#"><i class="fa fa-pinterest"></i></a>
 				<a href="#"><i class="fa fa-facebook"></i></a>
@@ -34,6 +35,7 @@ section: post
 				<a href="#"><i class="fa fa-dribbble"></i></a>
 				<a href="#"><i class="fa fa-behance"></i></a>
 			</div>
+</section>
 
 
 
