--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -5,9 +5,7 @@ section: post
 
 {% include "components/pembatas.njk"%}  
 
-
-
-<section class="games-single-page">
+	<section class="games-single-page">
 		<div class="container">
 			<div class="game-single-preview">
 				<img src="{{ '/' | url }}_includes/assets/img/games/big.jpg" alt="">
@@ -16,20 +14,22 @@ section: post
 				<div class="col-xl-9 col-lg-8 col-md-7 game-single-content">
 					<div class="gs-meta">{{ date | dateDisplay }}  /  in <a href="">Games</a></div>
 					<h2 class="gs-title">{{ title }}</h2>
+					<h4>Gameplay</h4>
 					<p>{{ layoutContent | safe }}</p>
-                </div>
-                <div class="footer-social d-flex justify-content-center">
-                    <a href="#"><i class="fa fa-pinterest"></i></a>
-                    <a href="#"><i class="fa fa-facebook"></i></a>
-                    <a href="#"><i class="fa fa-twitter"></i></a>
-                    <a href="#"><i class="fa fa-dribbble"></i></a>
-                    <a href="#"><i class="fa fa-behance"></i></a>
-                </div>    
-            </div>
-		</div>	
-</section> 
-
-
+					<h4>Conclusion</h4>
+					<p>{{ layoutContent | safe }}</p>
+					<div class="geme-social-share pt-5 d-flex">
+						<p>Share:</p>
+						<a href="#"><i class="fa fa-pinterest"></i></a>
+						<a href="#"><i class="fa fa-facebook"></i></a>
+						<a href="#"><i class="fa fa-twitter"></i></a>
+						<a href="#"><i class="fa fa-dribbble"></i></a>
+						<a href="#"><i class="fa fa-behance"></i></a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 
 
 
