--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -2,7 +2,7 @@
 layout: layouts/base.njk
 section: post
 ---
- 
+{% include "components/head.njk" %}
 <section class="games-single-page">
     <div class="container">
         <div class="game-single-preview">
