--- a/_includes/layouts/home.njk
+++ b/_includes/layouts/home.njk
@@ -7,7 +7,7 @@ section: home
 		<div class="hero-slider owl-carousel">
 			<div class="hero-item set-bg d-flex align-items-center justify-content-center text-center" data-setbg="{{ '/' | url }}_includes/assets/img/slider-bg-1.jpg">
 				<div class="container">
-					<h2>ALDA TUMAN!</h2>
+					<h2>TEST!</h2>
 					<p>Fusce erat dui, venenatis et erat in, vulputate dignissim lacus. Donec vitae tempus dolor,<br>sit amet elementum lorem. Ut cursus tempor turpis.</p>
 					<a href="#" class="site-btn">Read More  <img src="{{ '/' | url }}_includes/assets/img/icons/double-arrow.png" alt="#"/></a>
 				</div>
