--- a/_includes/layouts/home.njk
+++ b/_includes/layouts/home.njk
@@ -179,7 +179,7 @@ section: home
 
 		<!-- Intro section -->
 	<section class="intro-video-section set-bg d-flex align-items-end " data-setbg="{{ '/' | url }}_includes/assets/img/promo-bg.jpg">
-		<a href="https://www.youtube.com/watch?v=uFsGy5x_fyQ" class="video-play-btn video-popup"><img src="{{ '/' | url }}_includes\assets\img\icons\solid-right-arrow.png" alt="#"></a>
+		<a href="https://www.youtube.com/watch?v=uFsGy5x_fyQ" class="video-play-btn video-popup"><img src="{{ '/' | url }}_includes/assets/img/icons/solid-right-arrow.png" alt="#"></a>
 		<div class="container">
 			<div class="video-text">
 				<h2>Promo video of the game</h2>
