--- a/_includes/assets/css/style.css
+++ b/_includes/assets/css/style.css
@@ -470,6 +470,10 @@ ol {
   Hero section
 ---------------------*/
 
+.owl-next {
+	src : url("{{ '/' | url }}_includes/assets/img/icons/solid-right-arrow.png");
+}
+
 .hero-slider .owl-dots {
 	display: -ms-flex;
 	display: -webkit-box;
