--- a/_includes/layouts/home.njk
+++ b/_includes/layouts/home.njk
@@ -16,7 +16,10 @@ section: home
 				<div class="container">
 					<h2>Game on!</h2>
 					<p>Fusce erat dui, venenatis et erat in, vulputate dignissim lacus. Donec vitae tempus dolor,<br>sit amet elementum lorem. Ut cursus tempor turpis.</p>
-					<a href="#" class="site-btn">Read More  <img src="{{ '/' | url }}_includes/assets/img/icons/solid-right-arrow.png" alt="#"/></a>
+					<a href="#" class="site-btn">Read More  <img src="{{ '/' | url }}_includes/assets/img/icons/double-arrow.png" alt="#"/></a>
+				</div>
+				<div class="hero-slider owl-next owl-nav">
+				<a href="#" class="site-btn"><img src="{{ '/' | url }}_includes/assets/img/icons/solid-right-arrow.png" alt="#"></a>
 				</div>
 			</div>
 		</div>
